...
                                <rect key="frame" x="134" y="533.66666666666663" width="146" height="35"/>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <state key="normal" title="Crear una cuenta">
                                    <color key="titleColor" red="1" green="0.14236066780000001" blue="0.082741251700000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                <segments>
                                    <segment title="Datos personales"/>
                                    <segment title="Datos del centro"/>
                                    <segment title="Su cuenta"/>
                                </segments>
                                <connections>
...
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="538.33333333333337"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre (*)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZI5-kn-yAq">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20.333333333333332"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Apellidos (*)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lkT-Mh-Dvb">
                                                <rect key="frame" x="0.0" y="50.333333333333343" width="374" height="20.333333333333329"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fecha de nacimiento (*)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NmQ-ty-enL">
                                                <rect key="frame" x="0.0" y="100.66666666666666" width="374" height="20.333333333333329"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="690.33333333333337"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre del centro (*)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a85-hi-N3c" userLabel="Nombre del centro">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20.333333333333332"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tipo de centro (*)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8a3-BM-sde" userLabel="Tipo de cen
                                                <rect key="frame" x="0.0" y="50.333333333333343" width="374" height="20.333333333333329"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="222"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Introduzca sus datos para iniciar sesión" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Nc-Ld-JUT" 
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20.333333333333332"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="username"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contraseña" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OG1-2c-eO0" userLabel="Contraseña">
                                                <rect key="frame" x="0.0" y="50.333333333333343" width="374" height="20.333333333333329"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahP-bj-jk4" userLabel="Cancelar">
                                                <rect key="frame" x="0.0" y="186" width="374" height="36"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
